tests/paczka1/fuzzy1/49728455.err
Error in line 2: Di2pwBYcXx A861 69,6
Error in line 4: b8X6wu S719 12,8
Error in line 3: Di2pwBYcXx S285 0,1
Error in line 5: b8X6wu S285 42,5
Error in line 11: gauhkPSDOqb A861 87,0
Error in line 17: fxXIHqUo S719 124,4
Error in line 29: w6Cq A521 91,1
Error in line 36: fxXIHqUo A521 63,3
